
# ---------------------------------------- subdirectories --------------------------------------------------------------
# ======================================================================================================================


# ---------------------------------------- link libraries --------------------------------------------------------------
# ======================================================================================================================
target_link_libraries(${Target} PRIVATE rt)
